# GrokUsageWidget

./: .gitignore  README.md  index.html  netlify.toml  package-lock.json  package.json
.github/workflows/: release.yml
app-icon-src/: generate_icon.py
portable/: Start Grok Usage.bat
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/scrape/: fetch-usage.mjs  package.json
src-tauri/src/: fetch.rs  lib.rs  main.rs  models.rs  scrape_runtime.rs  settings.rs  win_process.rs
website/: README.md  generate-og.py  index.html  netlify.toml  patch_mac_download.py  styles.css  update_mac_links.py
